@@ -63,6 +63,7 @@
                                            (:file "salsa20" :depends-on ("cipher"))
                                            (:file "seed" :depends-on ("cipher"))
                                            (:file "serpent" :depends-on ("cipher"))
+                                           (:file "sm4" :depends-on ("cipher"))
                                            (:file "sosemanuk" :depends-on ("cipher"))
                                            (:file "square" :depends-on ("cipher"))
                                            (:file "tea" :depends-on ("cipher"))
@@ -231,6 +232,7 @@
                                            (:test-vector-file "salsa20-8")
                                            (:test-vector-file "seed")
                                            (:test-vector-file "serpent")
+                                           (:test-vector-file "sm4")
                                            (:test-vector-file "sosemanuk")
                                            (:test-vector-file "square")
                                            (:test-vector-file "tea")
