@@ -1,0 +1,34 @@
+;; Test vectors from https://eprint.iacr.org/2008/329.pdf
+
+(:ecb-mode-test #h"0123456789abcdeffedcba9876543210" #h"0123456789abcdeffedcba9876543210" #h"681edf34d206965e86b3e94f536e4246")
+
+
+;; Test vectors from Crypto++
+
+(:ecb-mode-test #h"eb23add6454757555747395b76661c9a" #h"d294d879a1f02c7c5906d6c2d0c54d9f" #h"865de90d6b6e99273e2d44859d9c16df")
+(:ecb-mode-test #h"11e3790f430b4729da1eef291bce99cd" #h"04a36e56b2032b725dde112fce3f8398" #h"4076848ad4563b9d8e3fd09ba2e5dcfe")
+(:ecb-mode-test #h"4310652e0bb55c2cba9aebd4fc2bed5c" #h"cb33507774e6e161cd5029e901c6c36a" #h"64b8d9fb4114d490ffbd105969310ef9")
+(:ecb-mode-test #h"fdba958326cd690f28c7632b5ebef6a1" #h"bae8a9b1c3319d3fc9d48817e034fe1b" #h"19c70a4e9fe8d6739863224c8734a79b")
+(:ecb-mode-test #h"63af71ae3ce38fd96afaaaf12cc3d5d3" #h"a505b41e20c73c777f56235261198e56" #h"2f6071bc04f55844bc8675fabea3f727")
+(:ecb-mode-test #h"03f360d31da9dbd2f0bfffeaefdb1d1e" #h"8177f025ddbc7ce919dc5d2612548878" #h"d7447f601c174aabc62e06bb85bb597c")
+(:ecb-mode-test #h"ea326bd4223b2f1be3cb0319220adcae" #h"15dbe19a7fac233433cb9ca190fac2f1" #h"6bc11d09bb46092831e2399cf1525f43")
+(:ecb-mode-test #h"f1163693e6e70cbf48e774368142286f" #h"95ff06c4a634e09baad6f1b2230662c7" #h"558614db4dd8aa43717c14c7b87a8d79")
+(:ecb-mode-test #h"cbad11138e97ee20b140bd8923031488" #h"a514119f5ab688278e581cfca5bdff5f" #h"8e4682e2a5f92b777caff65275528caf")
+(:ecb-mode-test #h"3198ab4e006a5180966d5075912bc406" #h"5f9b108b715f047b7879e323b0d95c3b" #h"7b40084f82caaa25821862f986abd424")
+
+
+;; Test vectors from Botan
+
+(:ecb-mode-test #h"f11235535318fa844a3cbe643169f59e" #h"a27ee076e48e6f389710ec7b5e8a3be5" #h"94cfe3f59e8507fec41dbe738ccd53e1")
+(:ecb-mode-test #h"419a55a70c401da6571654bc4af1f6d7" #h"9b6294ae9be009c87caefcd842632a1d" #h"9868917b7329ce6f1e1fba6e404d8f20")
+(:ecb-mode-test #h"ee1e457608d7704a99f76c73815cbfa8" #h"c89c30ad3b257ca7635052ed63b6d268" #h"ce25779ca2a8eefd7add059273e2a1fd")
+(:ecb-mode-test #h"43d99b186beaa4e2de3159f77bf708fa" #h"91cb86ca6b0fdf6671ff4ae4bf63ad6c" #h"3a6b1df36c9cbfc327ff8b6c7318579c")
+(:ecb-mode-test #h"bbe5816e2b56084fcdeab9b739ce899e" #h"b607bb382377f3b6d5fb740e3bf0e822" #h"4dcdc1708360a700130c3bd90c8f626f")
+(:ecb-mode-test #h"bf35fee606e59d0e1e18bda40180672c" #h"6f217dad31488a54a7f4482d1be230bc" #h"de1aaea076633b37b54aef10b180661a")
+(:ecb-mode-test #h"d2b1ce2cfdb2306be24f0364434f7734" #h"7ab0e2cc96e55659e5078591f510b721" #h"052e420981d36c01a96a8302f71fb7a6")
+(:ecb-mode-test #h"2ddd024a42b24a9652c8c52021024c33" #h"c9bd217786c00f420a88d6818b685a02" #h"ce273e3523b443eb34c7b6a153fc9308")
+(:ecb-mode-test #h"4a6453202ec4378492bfa3d6a685f6cd" #h"b9edc63029f5fa1390918736590a3483" #h"2c7e67e24281ba3271e6fff2d2b91b75")
+(:ecb-mode-test #h"6fc86efe73b3af96014e490882a34825" #h"13805831d15593ba3cf4553d4aefdb71" #h"a32951875534f6b1abb12465ef370fdc")
+
+
+(:keystream-test #h"7aa9470dc8182d09d2bb84411ffb6f96" #h"4efbe9452824555156404a8e1d201a9d" #h"b5f503e76d6505b344f1ddfe2e679814fc791684bb7e5e57a4d7027442701747bffdbb66fc920375397177a26ac8aba026cd627547b7f5ee9e8878ba1adafe905ab12f6cc5105975c3960945d9de29d5c07b3f037aad870304b2e4c47b7f81f4c1a8caab03432ba3a6dc38f570c1db9c069caabe50a1490952da1a68a1610bd9919c0a0936656ea9aaf613b067da0416b0c7dbc15d41ca9b49437fd47dbd649ffbf8b22987fb804729dca6f385c3932278807c81dc4d02a335d87efaaade78d19f270edb4a9bf8e6615f622e04239635d835470636ace72aa580b3cf8beda8d39ecd0caba5df7c6f7ae5a6465adb54686177f6965aab4be4caf8240cdc6422addd7c7e77c55801f10ab688cc9a67c2dc99bc6005d2628d97ba159689eb5bbc21ba98a48b33142a1f5ecda2e304167cb0060b88762df381842dad4230b2dcfac1225e734c15c3042ab006627c222c1e11f4a0fe22eb944756c6db434eea97628b0852cef46f59c604c3fd7472a130fad89961a9624827cec7c23949ab7570426f9c4f13033a417012ec8bc49481248bffd3295c92ae20dcc2a17d6e4c553790b6b64367fd320821f34014f517d44d8d4f5e0193bf2def8f55f3ab10d808feffd6289f21db6aca04ed08d6579e0ea0184e72d9ad325dbc45abc5fea540e6f890d959ca7dff296c26d9780d4e964be4b709c2c2125a75c22f2c21044515d0d0a1da6dc9f2607e2269691839ae1427bcfe629eea4d8f91ab97ee4372893950cea3e0b5d6e26e443c9632bfc57acc9563e93f0b5811a3fd6bbaf5b83be98d093ddd994a9db17e71c36d90b1fdc57c2421ee583f6d66b89ad6978a7b541dd4dad93cf5c5a5c004661ef9d0da23c6a4b110fdcaa8b762304009e8d24004e952688bb3563710f0200aa398114f3e95a2194c8d9ee96c63d90c7a2d32f7c41223834acf6afa899ddf84c3011a675ec3770000b6e2f218835bd6cd8b58473471b80748817f16d70bb17d2e99277db1bd8dadbc0514dbb3afad64dee9234bf3bed52c68bbc1f8aaf6138f2e0c8d8c3abefedc644c4a516863ca424bfb51ca5bf508c5b14a8cb5667a2bed482b24decf23549d53e0b13d0dafe86b9c111e8e60dc054cf0fbb0ddeebcf789d0b3900e28531f94ebdc86e2eb40bbb2faec16ca905747bb3c1fc31f2faba15a00eff14825a3e903c54e14c6f2d497d705dad51f1179241959a3bccdb92c305b3be26272c0f7fc19a9e4c07b3be970c08bd90601a9a229b212cac82cba523f9b4a7c573ad68cef99ece2cefc5bc44769275dd1f46d68d55da74e70b7c83260eb89cbfc25141481e72351cc26e1fe898c412efa9dad957086ae4f89737dd705dc13469888c1c593ea558f129a7c1c8c85005130ee3cf357625b96c324fc7550fe0fdf7e")
